# Tokn

./: .clippy.toml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  Dockerfile  GOVERNANCE.md  PLAN.md  README.md  SECURITY.md  SPEC.md  SPEC_ROUTER.md  SSOT.md  STATUS.md  TEST_COVERAGE_MATRIX.md  Taskfile.yml  VIBECODING_GUARD_BASELINE_2026_06_12.md  _typos.toml  analytics.rs  audit_scorecard.json  clippy.toml  codecov.yml  deny.toml  gitleaks.toml  justfile  llms.txt  mise.toml  nextest.toml  process-compose.yml  requirements-dev.txt  rustfmt.toml  sentry_config.rs  (+4 more)
.airlock/: lint.sh
.archive/orphan-root-src-tests/: NOTE
.githooks/: pre-push
.github/: CODEOWNERS  SHA_PIN_AUDIT.md
.github/workflows/: alert-sync-issues.yml  audit.yml  bench-perf-gate.yml  benchmark.yml  binaries.yml  cargo-deny.yml  ci.yml  codeql.yml  coverage.yml  deny.yml  docs.yml  fr-coverage.yml  journey-gate.yml  ledger-diff-check.yml  legacy-tooling-gate.yml  pages-deploy.yml  policy-gate.yml  pricing-governance-check.yml  quality-gate.yml  release-attestation.yml  release-crates.yml  release-drafter.yml  release.yml  sast.yml  sbom-refresh.yml  scorecard.yml  secret-scanning.yml  security-deep-scan.yml  security-guard-hook-audit.yml  security-guard.yml  security.yml  sonarcloud.yml  traceability.yml  trufflehog.yml
.phenotype/: ai-traceability.yaml
FRs/: FR-COST-001.md  FR-COST-002.md  FR-ING-002.md  FR-PRICE-001.md  FR-PRICE-002.md  FR-PRICE-008.md  FR-SES-001.md  FR-TOK-002.md
crates/pareto-rs/: Cargo.toml  pareto-rs.cdx.json
crates/pareto-rs/src/: cost.rs  format.rs  lib.rs  models.rs  pricing.rs
crates/tokenledger/: Cargo.toml  tokenledger-rs.cdx.json
crates/tokenledger/src/: analytics.rs  bench.rs  cache.rs  clap_ext.rs  cli.rs  cost.rs  guardrails.rs  lib.rs  main.rs  models.rs  orchestrate.rs  pricing.rs  tenant.rs  utils.rs
crates/tokenledger/src/benchmarks/: cli.rs  overrides.rs  store.rs
crates/tokenledger/src/ingest/: aggregation.rs  mod.rs
crates/tokenledger/src/routing/: mod.rs  pareto_frontier.rs  ports.rs
crates/tokenledger/tests/: budget_guardrails_integration_test.rs  claude_ingest_integration_test.rs  codex_ingest_integration_test.rs  cost_integration_test.rs  cursor_ingest_integration_test.rs  droid_ingest_integration_test.rs  ingest_checkpoint_integration_test.rs  integration_test.rs  output_integration_test.rs  sliding_window_integration_test.rs  smoke_test.rs  tenant_integration_test.rs  tenant_isolation_test.rs
deploy/selfhost/: Caddyfile  (+2 more)
docs/: CHANGELOG.md  FUNCTIONAL_REQUIREMENTS.md  PRD.md  SSOT.md  WORKLOG.md  index.md  package.json
src/: analytics.rs  guardrails.rs
tests/: integration_test.rs
(+80 files in other folders)
