[workspace]
resolver = "2"
members = ["crates/pareto-rs", "crates/tokenledger"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["KooshaPari <kooshapari@kooshapari.com>"]
repository = "https://github.com/KooshaPari/Tokn"
homepage = "https://github.com/KooshaPari/Tokn"

rust-version = "1.75"
[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = ["github"]
installers = ["shell", "powershell", "msi"]
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
]
[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
serde_yaml_ng = "0.10"
tempfile = "3.14"
